<resources>
    <string name="app_name">My Todo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_tasks">All Tasks</string>
    <string name="menu_Progress">Progress</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_title">Title</string>
    <string name="task_Description">Description</string>
    <string name="task_start_date">Start Date</string>
    <string name="task_end_date">End Date</string>
    <string name="submit">Submit</string>
    <string name="type">Type</string>
    <string name="add_task">Add Task</string>
    <string name="tasks">Tasks</string>
    <string name="tasks_today">Tasks Today</string>
    <string name="status">Status</string>
    <string name="add_task_text">Add a Task</string>
    <string name="view_task">View Task</string>
</resources>