<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.addTaskFragment.AddTaskFragment">
<data>
    <variable
        name="viewModel"
        type="com.dazz.mytodo.models.TodoViewModel" />
    <variable
        name="addTaskFrag"
        type="com.dazz.mytodo.ui.addTaskFragment.AddTaskFragment" />
</data>
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <TextView
           android:id="@+id/add_task_Heading"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="35sp"
           android:text="@string/add_task"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           android:layout_margin="15dp"/>
    <EditText
        android:id="@+id/add_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/add_task_Heading"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="5dp"
        android:hint="@string/task_title"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="35dp"/>
       <EditText
           android:id="@+id/add_task_desc"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textAlignment="center"
           app:layout_constraintTop_toBottomOf="@id/add_task_title"
           app:layout_constraintStart_toStartOf="parent"
           android:padding="5dp"
           android:hint="@string/task_Description"
           android:layout_margin="20dp"/>

       <ImageView
           android:id="@+id/add_task_start_date_icon"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textAlignment="center"
           app:layout_constraintTop_toBottomOf="@id/add_task_desc"
           app:layout_constraintStart_toStartOf="parent"
           android:src="@drawable/ic_baseline_date_range_24"
            android:layout_marginStart="10dp"
           android:layout_marginTop="30dp"/>

       <TextView
           android:id="@+id/add_task_start_date"
           android:layout_width="150dp"
           android:layout_height="wrap_content"
           android:layout_margin="10dp"
           android:layout_marginStart="8dp"
           android:hint="@string/task_start_date"
           android:padding="5dp"
           android:onClick="@{()->addTaskFrag.setDate(0)}"
           android:textAlignment="center"
           app:layout_constraintBottom_toBottomOf="@+id/add_task_start_date_icon"
           app:layout_constraintStart_toEndOf="@id/add_task_start_date_icon"
           app:layout_constraintTop_toTopOf="@+id/add_task_start_date_icon"
           app:setDate="@{addTaskFrag.SDate}"/>

       <ImageView
           android:id="@+id/add_task_end_date_icon"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="10dp"
           android:src="@drawable/ic_baseline_date_range_24"
           android:textAlignment="center"
           app:layout_constraintBottom_toBottomOf="@+id/add_task_start_date_icon"
           app:layout_constraintStart_toEndOf="@id/add_task_start_date" />

       <TextView
           android:id="@+id/add_task_end_date"
           android:layout_width="150dp"
           android:layout_height="wrap_content"
           android:layout_margin="10dp"
           android:layout_marginStart="8dp"
           android:hint="@string/task_end_date"
           android:padding="5dp"
           android:onClick="@{()->addTaskFrag.setDate(1)}"
           android:textAlignment="center"
           app:layout_constraintBottom_toBottomOf="@+id/add_task_end_date_icon"
           app:layout_constraintStart_toEndOf="@id/add_task_end_date_icon"
           app:layout_constraintTop_toTopOf="@+id/add_task_end_date_icon"
           app:setDate="@{addTaskFrag.EDate}"/>
       <TextView
           android:id="@+id/add_task_tv"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/type"
           android:padding="15dp"
           app:layout_constraintStart_toStartOf="parent"
           android:layout_marginTop="25dp"
           android:layout_marginStart="15dp"
           app:layout_constraintTop_toBottomOf="@id/add_task_start_date_icon"
           />

       <Spinner
           android:id="@+id/add_task_Type"
           android:layout_width="200dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="25dp"
           android:padding="15dp"
           android:textAlignment="center"
           app:layout_constraintBottom_toBottomOf="@+id/add_task_tv"
           app:layout_constraintStart_toEndOf="@id/add_task_tv"
           app:layout_constraintTop_toTopOf="@+id/add_task_tv" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="45dp"
            android:onClick="@{()->addTaskFrag.submitTask()}"
            app:layout_constraintTop_toBottomOf="@id/add_task_Type"/>
   </androidx.constraintlayout.widget.ConstraintLayout>

</layout>